Implemented koin and jetpack navigation to project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Lembretes e tarefas</string>
+    <string name="create_task">Criar Tarefa</string>
+    <string name="title">Titulo</string>
+    <string name="description">Descrição</string>
+    <string name="date">Data</string>
+    <string name="time">Hora</string>
+    <string name="cancel">Cancelar</string>
+    <string name="open_new_task_fragment">Open new Task fragment</string>
 </resources>
