--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,10 @@
     <string name="app_name">Lembretes e tarefas</string>
     <string name="create_task">Criar Tarefa</string>
     <string name="title">Titulo</string>
-    <string name="description">Descrição</string>
+    <string name="description">Descrição(Opcional)</string>
     <string name="date">Data</string>
     <string name="time">Hora</string>
     <string name="cancel">Cancelar</string>
     <string name="open_new_task_fragment">Open new Task fragment</string>
+    <string name="tasks">Tarefas</string>
 </resources>
