--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="date">Data</string>
     <string name="time">Hora</string>
     <string name="cancel">Cancelar</string>
+    <string name="delete">Deletar</string>
     <string name="open_new_task_fragment">Open new Task fragment</string>
     <string name="tasks">Tarefas</string>
+    <string name="task_edit">Editar tarefa</string>
 </resources>
